# pyeducationdata

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  education_data_api_documentation.md  pyproject.toml  r_educationdata_documentation.md
.github/workflows/: lint.yml  tests.yml
examples/: 01_simple_example.py  02_enrollment_analysis.py  03_summary_statistics.py  04_college_data.py  05_error_handling.py  README.md  basic_usage.py  run_all_examples.py
src/pyeducationdata/: __init__.py  api.py  client.py  constants.py  exceptions.py  labels.py  models.py  pagination.py  utils.py  validation.py
tests/: conftest.py  test_api.py  test_client.py  test_utils.py
