[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyeducationdata"
version = "0.1.0"
description = "Python package for accessing the Urban Institute's Education Data Portal API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Shane Orr", email = "shane@example.com"}
]
keywords = ["education", "data", "api", "urban-institute", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/shaneorr/pyeducationdata"
Documentation = "https://github.com/shaneorr/pyeducationdata#readme"
Repository = "https://github.com/shaneorr/pyeducationdata"
"Bug Tracker" = "https://github.com/shaneorr/pyeducationdata/issues"

[tool.hatchling.build.targets.wheel]
packages = ["src/pyeducationdata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=pyeducationdata",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py
